--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: grey;
-    /* margin: auto; */
+    margin: auto;
 }
 
 @media all and(max-width:480px){
@@ -15,18 +15,14 @@ body{
 
 #texteCentral{
     width: 500px;
-    /* display: inline-block;
-    overflow: auto; */
+  
     background-color: rgb(0, 0, 0,0.4);
     padding: 60px;
     box-sizing: border-box;
     border-radius: 20%;
     justify-content: center;
-    /* align-items: center; */
-    /* margin-top: 200px; */
+ 
     margin-top: 13%;
-    /* margin-top: 50%; */
-    /* margin: auto; */
     margin-left: 30%;
     
 }
