--- a/assets/css/page1.css
+++ b/assets/css/page1.css
@@ -37,6 +37,7 @@ h1{
 
 a{
     text-decoration: none;
+    color: black;
 }
 
 
@@ -83,4 +84,9 @@ button{
     border-radius: 6px;
     margin: auto;
     margin-top: 50px;
+}
+
+#duel{
+   margin-top: 50px;
+margin-left: 250px;
 }
