--- a/assets/css/page2.css
+++ b/assets/css/page2.css
@@ -20,7 +20,10 @@ h1{
 
 a{
     text-decoration: none;
+    color: black;
 }
+
+
 
 #imageFfe{
     margin-left: 670px;
@@ -58,4 +61,9 @@ button{
     border: none;
     box-sizing: border-box;
     border-radius: 6px;
+}
+
+#coq{
+    margin-top: 50px;
+    margin-left: 630px;
 }
