--- a/assets/css/page1.css
+++ b/assets/css/page1.css
@@ -40,6 +40,12 @@ a{
     color: black;
 }
 
+nav ul.tableau li.btn:hover a{
+    color: black;
+    background-color: rgb(25 41 75 / 75%);
+    transition: 0.20 all;
+}
+
 
 
 li .navbar a{
@@ -87,6 +93,32 @@ button{
 }
 
 #duel{
-   margin-top: 50px;
-margin-left: 250px;
+   margin-top: 30px;
+   margin-left: 350px;
 }
+
+footer{
+    width: 100%;
+    
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    background-color: rgb(25 41 75 / 75%);
+    }
+    
+    #gauche{
+        color: white;
+        
+        margin-left: 30px;
+        
+        
+    }  
+    
+    #droite{   
+        color: white;
+       
+        
+        margin-left: 1300px;
+        text-align: right;
+        
+    }
