--- a/assets/css/page2.css
+++ b/assets/css/page2.css
@@ -1,22 +1,55 @@
-body{
-    padding: 0;
-    margin: 0;
-    background-color: grey;
-    width: auto;
-}
+html{
+    position: relative;
+     min-height: 100%;
+   } 
+   
+   body{
+       margin: 0;
+       padding: 0;
+       background-color: grey;
+       margin: auto; 
+       /* overflow-y: hidden;
+       overflow-x: hidden;  */
+   }
+   
 
-@media all and(max-width:480px){
-    h1{float: none;}
-    #imageFfe{float: none;}
-    .tableau{float: none;}
-    button{float: none;}
+@media screen and  (max-width:800px){
+    .tableau{ 
+        flex-direction: column;
+        height: auto;
+        width: 100%;
+    }
+    #imageFfe{
+        width: 50px;
+        height: 50px;
+    }
+    #coq{
+        display: none;
+    }
+    #entrer{
+        
+    }
+    #barreDeRecherche{
+        margin-left: 5px;
+    }
+
+    footer{
+        margin-bottom: -100px;
+        display: flex;  
+        margin-top: auto;
+    }
+    #gauche{
+        float: none;
+    }
+    #droite{
+        float: none;
+    }
 }
 
 h1{
     color: blue;
     text-align: center;
 }
-
 
 a{
     text-decoration: none;
@@ -30,7 +63,7 @@ nav ul.tableau li.btn:hover a{
 }
 
 #imageFfe{
-    margin-left: 670px;
+    margin-left: 44%;
 }
 
   .tableau{
@@ -42,19 +75,18 @@ nav ul.tableau li.btn:hover a{
     padding: 10px;
     text-transform: uppercase;
     justify-content: space-evenly;  
+    width: 100%; 
 }
 
 #entrer{
     text-align: center;
     justify-content: center;
     margin: 10px auto;
-    margin-left:52em;
+    margin-left: 45%;
     background-color: aqua;
     color: black;
     border: black solid 2px;
 }
-
-
 
 button{
     background-color: greenyellow;
@@ -71,8 +103,8 @@ button{
 }
 
 #coq{
-    margin-top: 50px;
-    margin-left: 630px;
+    margin-top: 5%;
+    margin-left: 41%;
 }
 
 li{
@@ -80,25 +112,27 @@ li{
     list-style-type: none;
     text-align: center;
     color: chartreuse;
-    text-transform: uppercase;
-    
+    text-transform: uppercase;  
 }
 
 footer{
-    width: 100%;
-    position: absolute;
     bottom: 0;
     display: flex;
     background-color: rgb(25 41 75 / 75%);
-    }
+    margin-top: auto;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
     
 #gauche{
-    color: white; 
-    margin-left: 30px; 
+    color: white;   
+    margin-left: 5%;
 }  
     
 #droite{   
     color: white; 
-    margin-left: 1300px;
+    margin-left: 80%;
     text-align: right;  
 }
