--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,55 +12,6 @@ body{
     overflow-x: hidden; 
 }
 
-@media screen and (max-width:800px){
-    #texteCentral{  
-        max-width: 100vw;
-    }
-    #pseudo{
-        text-align: center;
-        
-    }
-    #mdp{
-        text-align: center
-        
-    }
-    input{
-        display: block;
-        margin: 10px auto;
-        
-        padding: 6px 10px;
-        outline:none;
-        border: none;
-        box-sizing: border-box;
-        border-radius: 6px;
-        max-width: 50vw;
-    }
-    button{
-        background-color: greenyellow;
-        font-weight: bold;
-        cursor: pointer;
-        display: block;
-        margin: 10px auto;
-        
-        padding: 6px 10px;
-        outline: none;
-        border: none;
-        box-sizing: border-box;
-        border-radius: 6px;
-        max-width: 50vw;
-    }
-    footer{
-        display: flex;
-        margin-top: auto;
-    }
-    #gauche{
-        float: none;
-    }
-    #droite{
-        float: none;
-    }
-}
-
 #texteCentral{
     width: 500px;
     background-color: rgb(0, 0, 0,0.4);
@@ -126,3 +77,52 @@ footer{
     margin-left: 80%;
     text-align: right; 
 }
+
+@media screen and (max-width:480px){
+    #texteCentral{  
+        margin-left: 2px;
+        margin-right: 2px;
+        margin-top: 10px;
+        max-width: 100vw;
+    }
+ 
+    input{
+        max-width: 50vw;
+    }
+    button{
+        max-width: 50vw;
+    }
+    footer{
+        display: none;
+    }
+}
+
+@media (min-width:481px) and (max-width:768px){
+    #texteCentral{  
+        margin-top: 5px;
+        margin-left: 21%;
+        width: 500px;
+    }
+    
+    footer{
+        display: flex;
+        margin-top: auto;
+        height: 53px;
+    }
+}
+
+@media (min-width:769px) and (max-width:1024px){
+    #texteCentral{  
+        margin-top: 5px;
+        margin-left: 26%;
+        width: 500px;
+    }
+    
+    footer{
+        display: flex;
+        margin-top: auto;
+        height: 53px;
+    }
+
+}
+
