--- a/assets/css/page2.css
+++ b/assets/css/page2.css
@@ -8,44 +8,10 @@ html{
        padding: 0;
        background-color: grey;
        margin: auto; 
-       /* overflow-y: hidden;
-       overflow-x: hidden;  */
+       overflow-y: hidden;
+       overflow-x: hidden; 
    }
    
-
-@media screen and  (max-width:800px){
-    .tableau{ 
-        flex-direction: column;
-        height: auto;
-        width: 100%;
-    }
-    #imageFfe{
-        width: 50px;
-        height: 50px;
-    }
-    #coq{
-        display: none;
-    }
-    #entrer{
-        
-    }
-    #barreDeRecherche{
-        margin-left: 5px;
-    }
-
-    footer{
-        margin-bottom: -100px;
-        display: flex;  
-        margin-top: auto;
-    }
-    #gauche{
-        float: none;
-    }
-    #droite{
-        float: none;
-    }
-}
-
 h1{
     color: blue;
     text-align: center;
@@ -136,3 +102,47 @@ footer{
     margin-left: 80%;
     text-align: right;  
 }
+
+@media screen and (max-width:480px){
+    .tableau{ 
+        flex-direction: column;
+        height: auto;
+        width: 100%;
+    }
+    #imageFfe{
+        width: 50px;
+        height: 50px;
+    }
+    #coq{
+        display: none;
+    }
+    #entrer{
+        margin-left: 27%;
+    }
+    #barreDeRecherche{
+        margin-left: 5px;
+    }
+
+    footer{
+       display: none;
+    }
+}
+
+@media (min-width:481px) and (max-width:768px){
+    #imageFfe{
+       display: none;
+    }
+    #coq{
+        display: none;
+    }
+    #entrer{
+        margin-left: 40%;  
+    }
+    footer{
+        margin-bottom: -5px;
+    }
+}
+
+    @media (min-width:769px) and (max-width:1024px){
+
+    }
